...
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gr1-h8-SQc" userLabel="Like button">
                                                    <rect key="frame" x="332" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="Like button"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
                                                    <connections>
                                                        <action selector="likeButtonClickedWithSender:" destination="g28-LM-LcQ" eventType="touchUpInside" id="r0W-80-ldp"/>
...
                                <connections>
                                    <outlet property="delegate" destination="sRt-jm-LgH" id="zHZ-Dc-Hoi"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mGu-y9-diy">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="jEx-Kc-zgt"/>
                                    <constraint firstAttribute="height" constant="48" id="qKK-WK-I2C"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backButton"/>
...
